# vacaciones

./: .dockerignore  .env  .env.example  .gitignore  BUILD-RELEASE.md  CLAUDE.md  Cargo.toml  DOCKER.md  Dockerfile  LICENSE  README.md  build-windows-release.sh  docker-compose.yml
src/: config.rs  error.rs  lib.rs  main.rs  routes.rs
src/auth/: mod.rs
src/db/: dynamodb.rs  mod.rs
src/handlers/: auth.rs  empleado.rs  mod.rs  solicitud.rs
src/models/: empleado.rs  mod.rs  solicitud.rs
src/services/: auth.rs  empleado.rs  mod.rs  solicitud.rs
src/session/: mod.rs
static/css/: style.css
static/js/: app.js
templates/: base.html  empleado_detalle.html  empleados.html  home.html  nueva_solicitud.html  solicitudes.html
