[package]
name = "vacaciones-app"
version = "0.1.0"
edition = "2024"

[dependencies]
askama ={version = "0.15.4"} 
aws-config = "1.8.12"
aws-sdk-dynamodb = "1.103.0"
axum = { version = "0.8.8", features = ["macros"] }
bcrypt = "0.18.0"
chrono = { version = "0.4.43", features = ["serde"] }
dotenv = "0.15.0"
serde = {version = "1.0.228", features= ["derive"]}
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["fs"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
