[package]
name = "vacaciones-app"
version = "0.1.0"
edition = "2024"
default-run = "vacaciones-app"

[lib]
name = "vacaciones_app"
path = "src/lib.rs"

[dependencies]
askama ={version = "0.15.4"}
async-trait = "0.1.85"
aws-config = "1.8.12"
aws-sdk-dynamodb = "1.103.0"
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.12.5", features = ["cookie"] }
axum-macros = "0.5.0"
bcrypt = "0.18.0"
chrono = { version = "0.4.43", features = ["serde"] }
dotenv = "0.15.0"
rand = "0.10.0"
serde = {version = "1.0.228", features= ["derive"]}
serde_json = "1.0.149"
thiserror = "2.0.18"
time = "0.3.37"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["fs"] }
tower-sessions = "0.15.0"
tower-sessions-core = "0.15.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
urlencoding = "2.1.3"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
